deployment/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecommerce-ui
spec:
  selector:
    matchLabels:
      app: ecommerce-ui
  template:
    metadata:
      labels:
        app: ecommerce-ui
        role: user-interface
    spec:
      containers:
        - name: ecommerce-ui
          image: ghcr.io/hamidreza-ygh/ecommerce-ui:latest
          ports:
            - name: http
              containerPort: 80
              protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-ui
spec:
  selector:
    app: ecommerce-ui
  ports:
    - name: http
      port: 80
      protocol: TCP
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ui
spec:
  rules:
    - host: tenantodo.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ecommerce-ui
                port:
                  number: 80
    - host: api.tenantodo.life
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: user-manager
                port:
                  number: 3000

# With TLS CONFIGURATION
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: tenant-ui
# spec:
#   tls:
#   - hosts:
#       - tenantodo.life
#       - api.tenantodo.life
#     secretName: tenant-ui-cert
#   rules:
#     - host: tenantodo.life
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: tenant-ui
#                 port:
#                   number: 80
#     - host: api.tenantodo.life
#       http:
#         paths:
#           - path: /
#             pathType: Prefix
#             backend:
#               service:
#                 name: tenant-manager
#                 port:
#                   number: 3000
